watchlist-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: watchlist-service
  namespace: watchlist
spec:
  template:
    spec:
      containers:
        - image: ghcr.io/knative/helloworld-go:latest
          ports:
            - containerPort: 8080
          env:
            - name: TARGET
              value: "World"
